--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
     <title>Adewale Tosin | Portfolio</title>
   </head>
   <body>
+    <form name="Contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
