--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   </head>
   <body>
     <form name="Contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" required/>
-      <input type="email" name="email" required/>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
       <textarea name="message"></textarea>
     </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
